Better compatibility with DefaultTypeCodec